--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -5,8 +5,8 @@
 
 <div class="container">
     <!-- <h1>Welcome to Home Page</h1> -->
-    <!-- <h1>Welcome to Home Page, {{ name }}</h1> -->
-    <!-- <h2>This is the full home page</h2> -->
+    <h1>Welcome to Home Page, <span style="color: blue;">{{name}}</span></h1>
+
     <form action="">
         <div class="mb-3">
             <label for="searchMovie" class="form-label">
