--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,41 +1,47 @@
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-
+{% extends 'base.html' %}
+{% block content %}
 
 <div class="container">
-    <!-- <h1>Welcome to Home Page</h1> -->
-    <h1>Welcome to Home Page, <span style="color: blue;">{{name}}</span></h1>
+    <h1>Welcome to Home Page, <span style="color: blue;">{{ name }}</span></h1>
 
-    <form action="">
+    <form action="" method="GET">
         <div class="mb-3">
-            <label for="searchMovie" class="form-label">
-                Search for Movie:
-            </label>
+            <label for="searchMovie" class="form-label">Search for Movie:</label>
             <input type="text" class="form-control" name="searchMovie" />
         </div>
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
     <p>Searching for: {{ searchTerm }}</p>
+
     <div class="row row-cols-1 row-cols-md-3 g-4">
         {% for movie in movies %}
-        <div v-for="movie in movies" class="col">
+        <div class="col">
             <div class="card">
-                <img class="card-img-top" src="{{ movie.image.url }}" />
+                <img class="card-img-top" src="{{ movie.image.url }}" alt="{{ movie.title }}">
                 <div class="card-body">
-                    <h5 class="card-title fw-bold">{{ movie.title }}</h5>
+                    <h5 class="card-title fw-bold">{{ movie.title }} ({{ movie.year }})</h5>
+                    <p class="card-text"><strong>Genre:</strong> {{ movie.genre }}</p>
                     <p class="card-text">{{ movie.description }}</p>
                     {% if movie.url %}
-                    <a href="{{ movie.url }}" class="btn btn-primary">
-                        Movie Link
-                    </a>
+                    <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
                     {% endif %}
                 </div>
             </div>
         </div>
         {% endfor %}
     </div>
+    <br/>
     <br />
-    <br />
+    <br  />
+    <h2>Join our mailing list:</h2>
+    <form action="{% url 'signup' %}">
+        <div class="mb-3">
+            <label for="email" class="form-label">Enter your email:</label>
+            <input type="email" class="form-control" name="email" />
+        </div>
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+    </form>
 </div>
+
+{% endblock content %}
 
